test that virtual threads executor works